# swagger/swagger.json
@@ -1435,7 +1435,7 @@
                 "responses": {}
             }
         },
-        "/order/getorder/{id}": {
+        "/order/getorder/{order_type}": {
             "get": {
                 "tags": [
                     "Restaurant"
@@ -1450,7 +1450,7 @@
                 "operationId": "getorder",
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "order_type",
                         "in": "path",
                         "required": true
                     }
